feat: add user controller

--- a/src/WebApi/appsettings.json
+++ b/src/WebApi/appsettings.json
@@ -6,8 +6,9 @@
     }
   },
   "DatabaseSettings": {
-    "CollectionName": "Reviews",
-    "ConnectionString": "mongodb://admin:admin@localhost:27017",
+    "BookReviewCollectionName": "BookReviews",
+    "UserCollectionName": "Users",
+    "ConnectionString": "mongodb://mongodb:27017",
     "DatabaseName": "PageFinderDb"
   },
   "AllowedHosts": "*"
